# cwru-ros-pkg-hydro

./: README.md  frames.gv  mktPtPos.txt  output_2015-03-24-16-36-22.bag.active  output_2015-03-24-16-57-47.bag.active
catkin/: 2015-02-03-23-49-36.bag.active  2015-02-03-23-52-40.bag  mktPtPos.txt  reachableMktPtPos.txt  unreachableMktPtPos.txt
catkin/src/cwru_376_student/abby_path/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/ik_maker/: CMakeLists.txt  package.xml
catkin/src/cwru_376_student/object_finder/: CMakeLists.txt  README.md  package.xml
catkin/src/cwru_376_student/object_finder/src/: object_finder.cpp  object_finder.h
documents/: abby_startup
logs/: 2015-02-19-14-10-26.bag  2015-02-19-14-10-26_cmd_vel_stamped.mat  2015-02-19-14-10-26_odom.mat  amcl-run1_2015-03-24-17-53-37.bag  jinx-1.bag  jinx-1__odom.mat  jinx-2-lidar.bag  jinx-2-lidar__lidar_alarm.mat  jinx-2-lidar__lidar_nearest.mat  jinx-2-lidar__odom.mat  jinx-3-lidar.bag  jinx-3-lidar__cmd_vel.mat  jinx-3-lidar__lidar_alarm.mat  jinx-3-lidar__lidar_nearest.mat  jinx-3-lidar__odom.mat  jinx-amcl-pp-xy_2009-12-31-19-09-10.bag  jinx-amcl-pp-xy_2009-12-31-19-13-25.bag  jinx-amcl-pp-xy_2009-12-31-19-14-47.bag  jinx-amcl-pp-xy_2009-12-31-19-18-54.bag  jinx-amcl-pp-xy_2009-12-31-19-21-54.bag  jinx-amcl-pp-xy_2009-12-31-19-24-37.bag  jinx-amcl-pp-xy_2009-12-31-19-32-37.bag  jinx-amcl-pp-xy_2009-12-31-19-33-30.bag  jinx-amcl-pp-xy_2009-12-31-19-35-34.bag  jinx-amcl-pp-xy_good_amcl_pose.mat  jinx-amcl-pp-xy_good_path_planner.mat  jinx-amcl-ps5-startingthinkbox_amcl_pose.mat  jinx-amcl-ps5-startingthinkbox_path_planner.mat  jinx-amcl_2015-03-31-16-29-08.bag  jinx-amcl_2015-03-31-16-33-38.bag  jinx-amcl_2015-03-31-16-42-48.bag  jinx-amcl_2015-03-31-16-43-40.bag  jinx-amcl_2015-03-31-16-46-45.bag  jinx-amcl_2015-03-31-17-11-59.bag  jinx-hallway.bag  jinx-hallway_cmd_vel_stamped.mat  jinx-hallway_odom.mat  jinx-triangle.bag  jinx-triangle_cmd_vel_stamped.mat  jinx-triangle_odom.mat  (+10 more)
(+70 files in other folders)
